# agro_mate

./: NOTA IMPORTANTE.md  README.md
agro_mate/: CMakeLists.txt  package.xml
agro_mate_bag_files/rosbag2_2024_05_11-17_08_19_waypoint/: metadata.yaml
agro_mate_bag_files/rosbag2_2024_05_11-17_47_03_to_pose/: metadata.yaml
agro_mate_capture_image/: package.xml  setup.cfg  setup.py
agro_mate_capture_image/agro_mate_capture_image/: capturar.py
agro_mate_interface/: CMakeLists.txt  package.xml
agro_mate_interface/action/: FollowWaypoints.action  Waypoints.action
agro_mate_interface/srv/: MyPointMsg.srv
agro_mate_msg/: package.xml  setup.cfg  setup.py
agro_mate_nav2_system/: package.xml  setup.cfg  setup.py
agro_mate_point_action/: package.xml  setup.cfg  setup.py
agro_mate_point_service/: package.xml  setup.cfg  setup.py
agro_mate_provide_map/: package.xml  setup.py
agro_mate_slam/: package.xml  setup.cfg  setup.py
agro_mate_world/: CMakeLists.txt
agro_mate_world_2/: CMakeLists.txt  package.xml
custom_interface/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
mundo_pilares/: CMakeLists.txt  package.xml
my_first_action/: package.xml  setup.py
my_nav2_system/: package.xml  setup.py
my_slam/: package.xml  setup.py
provide_map/: package.xml  setup.py
publicador_velocidad/: package.xml  setup.cfg  setup.py
show_msg/: package.xml  setup.py
waypoints_action/: package.xml  setup.cfg  setup.py
web_mouvement_caller/: package.xml  setup.cfg  setup.py
(+67 files in other folders)
